SERVER-33382 Permit views in GlobalCursorIdCache::timeoutCursors().